# app-store-access

./: Cargo.toml  README.md
access/: Cargo.toml
access/src/: main.rs
apple/: Cargo.toml
apple/src/: lib.rs
apple/src/archive/: mod.rs
apple/src/client/: mod.rs  suggest.rs
apple/src/model/: content_rating.rs  devices.rs  full.rs  genre.rs  lookup.rs  mod.rs  reviews.rs  strict_fix.rs  suggest.rs  version.rs
apple/src/request/: headers.rs  markets.rs  mod.rs  params.rs
core/: Cargo.toml
core/src/: country.rs  language.rs  lib.rs  model.rs
core/src/client/: mod.rs
core/src/js/: json.rs  mod.rs
google/: Cargo.toml
google/src/: lib.rs  parse.rs
google/src/archive/: mod.rs
google/src/client/: mod.rs  suggest.rs
google/src/model/: app.rs  developer.rs  full.rs  mod.rs  search.rs  strict_fix.rs
google/src/model/review/: criterion.rs  mod.rs
google/src/request/: body.rs  mod.rs  url.rs
google/src/request/params/: mod.rs
