[package]
name = "app-store-access-google"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
app-store-access = { path = "../core/" }
bounded-static = { workspace = true }
bounded-static-derive-more = { workspace = true }
chrono = { workspace = true }
cli-helpers = { workspace = true }
csv = { workspace = true }
ecmade = { workspace = true }
http = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
scraper-trail = { workspace = true }
serde = { workspace = true }
serde-query = { workspace = true }
serde_json = { workspace = true }
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

[features]
default = []
strict = []